${MIRROR_WGET}/download_package purl.obolibrary.org.pr
${MIRROR_WGET}/download_package purl.obolibrary.org.uberon.obo
${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload 
${MIRROR_WGET}/download_package ftp.geneontology.org.goload 
${MIRROR_WGET}/download_package snapshot.geneontology.org.goload
${MIRROR_WGET}/download_package snapshot.geneontology.org.goload.noctua

TAG: goload-6-0-22-2
DATE: 02/21/2023
STAFF: lec
wts2-1125/fl2-220/Modify the Noctua load to only include the noctua_mgi file. 

TAG: goload-6-0-22-1
DATE: 11/25/2022
STAFF: lec
wts2-1054/preprocessrefs.py/change 1 long pumedid query to 1 per pubmedid

TAG: goload-6-0-21-2
DATE: 08/04/2022
STAFF: lec
wts2-947/Allow use of IEP as evidence code for GO annotations in all annotation loads

TAG: goload-6-0-21-1
DATE: 07/19/2022
STAFF: lec
wts2-920/Changes to MGI GAF (GO annotations) for consistency of types with those reported in mgi.gpi file
replace marker type with so term

TAG: goload-6-0-20-1
DATE: 06/30/2022
STAFF: lec
wts2-730/Need to be sure refs that are used in annotations (i.e. in GOA folder processing) are not marked 'discard'
added:  preprocessrefs.py
which is called from goamouse/goamouse.sh and gomousenoctua/gomousenoctua.sh

TAG: goload-6-0-18-6
TAG: goload-6-0-18-5
TAG: goload-6-0-18-4
TAG: goload-6-0-18-3
DATE: 03/23/2022, 04/07/2022, 04/12/2022
STAFF: lec
wts2-703/new Noctua -> GO Annotation pipeline
add generation of pubmed.error to end of gomousenoctua/gomousenoctua.sh

TAG: goload-6-0-18-2
DATE: 02/21/2022
STAFF: lec
wts2-767/mgi_notechunk/mgi_note merge
only change is to the index file

TAG: goload-6-0-18-1
DATE: 0210/2022
STAFF: lec
wts2-788/Noctua Annotations not being loaded

TAG: goload-6-0-17-3
DATE: 10/01/2021
STAFF: lec
wts2-708/Evidence code missing from MGI GPAD file

TAG: goload-6-0-17-2
DATE: 06/11/2021
STAFF: lec
wts2-641/Allow additional go_property (is_active_in) to be valid in Noctua load and reexamine how we define duplicate annotations

TAG: goload-6-0-17-1